[package]
name = "tracer_cli_rust"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "time_tracer_cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rpassword = "7.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
